src/objects/pse__Utilization_Calculation__c.object
<CustomObject>
    <customHelpPage>pse__UtilizationCalculationHelp</customHelpPage>
    <description>A container object that holds information on resource utilization at a single point in time. Utilization calculation, detail, and (optionally) summary records are created when you calculate utilization for a resource, region, practice, or group. PSA calculates utilization as a percentage: the number of hours resources have billed, divided into the number of billable hours in a given time period. If configured, utilization also calculates the number of hours resources are assigned in the future (held against resource requests), or aggregates requested and assigned hours by role.

Run utilization reports on the information stored in this object to understand how utilized your resources are in comparison with their work calendar hours.</description>
    <fields>
        <fullName>pse__Batch_Id_Unheld_Calc__c</fullName>
        <label>Batch Id Unheld Calc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Id__c</fullName>
        <description>An internal field used by PSE - not intended for display to users.</description>
        <externalId>true</externalId>
        <inlineHelpText>An internal field used by PSE - not intended for display to users.</inlineHelpText>
        <label>Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Calculate_Historical_Utilization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to calculate historical utilization from timecard records.</inlineHelpText>
        <label>Calculate Historical Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Calculate_Scheduled_Utilization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to calculate forward-looking utilization from scheduled assignments.</inlineHelpText>
        <label>Calculate Scheduled Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Opportunity_Probability__c</fullName>
        <description>Where resource requests (on the region, practice or group on which the utilization calculation is run) do not have a value for Probability (%) on the linked opportunity, determines the default percentage value to use to weight held and unheld hours. The default value is 100.</description>
        <label>Default Opportunity Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Delete_Prior_Calculation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, the previous calculations and details are deleted when utilization is calculated. Whether the calculation is deleted also depends on the combination of RPG, resource, and time period, or the time period parent combination. This option is applicable when the current utilization calculation is the master and uses the same logic as clearing the Is Report Master checkbox.</description>
        <label>Delete Prior Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Deleted_Date__c</fullName>
        <description>Indicates the date on which the record was deleted as a result of selecting Delete Prior Calculation.</description>
        <label>Deleted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Error_Details__c</fullName>
        <description>Details of errors that occurred during processing. Not intended for display.</description>
        <label>Error Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Excluded_Roles__c</fullName>
        <description>Enables you to select the roles that do not require utilization summary records to be created.</description>
        <inlineHelpText>Select the roles that do not require utilization summary records to be created.</inlineHelpText>
        <label>Excluded Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Client Manager</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Senior Consultant</fullName>
                </value>
                <value>
                    <fullName>Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Utilization Calculations</relationshipLabel>
        <relationshipName>Utilization_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Cut_Off_Date__c</fullName>
        <inlineHelpText>Select the value that describes when historical utilization calculations should stop. This is typically the last day of the week that all timecards were entered.</inlineHelpText>
        <label>Historical Utilization Cut-Off Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Last Week</fullName>
                    <default>true</default>
                    <label>End of Last Week</label>
                </value>
                <value>
                    <fullName>Today</fullName>
                </value>
                <value>
                    <fullName>End of This Week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_End_Date__c</fullName>
        <label>Historical Utilization End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Historical_Utilization_Start_Date__c</fullName>
        <label>Historical Utilization Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Include_Sublevels__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to calculate utilization for all sub levels of the selected region, practice, or group. This field is ignored if utilization is calculated only for a resource.</inlineHelpText>
        <label>Include Sublevels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Include_Sublevels_in_Subtotals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should subtotals be calculated for all sub levels of the selected subtotal by R/P/G</description>
        <label>Include Sublevels in Subtotals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Report_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether this calculation is the master calculation for the combination of Region/Practice/Group/Resource and Time Period.</inlineHelpText>
        <label>Is Report Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Minimum_Opportunity_Probability__c</fullName>
        <description>Where resource requests (on the region, practice or group on which the utilization calculation is run) have a value for Probability (%) on the linked opportunity, determines the minimum threshold below which opportunity probability is not considered when calculating capacity demand by role. The default value is 0.</description>
        <label>Minimum Opportunity Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Utilization Calculations</relationshipLabel>
        <relationshipName>Utilization_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Utilization Calculations</relationshipLabel>
        <relationshipName>Utilization_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Utilization Calculations</relationshipLabel>
        <relationshipName>Utilization_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_End_Date__c</fullName>
        <label>Scheduled Utilization End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Utilization_Start_Date__c</fullName>
        <label>Scheduled Utilization Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error Occurred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Subtotal_by_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subtotal by Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Utilization Calculations (Subtotal by Group)</relationshipLabel>
        <relationshipName>Utilization_Calculations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Subtotal_by_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subtotal by Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Utilization Calculations (Subtotal By Practice)</relationshipLabel>
        <relationshipName>Utilization_Calculations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Subtotal_by_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subtotal by Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Utilization Calculations (Subtotal by Region)</relationshipLabel>
        <relationshipName>Utilization_Calculations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period_Types__c</fullName>
        <inlineHelpText>The types of time periods to calculate utilization for.</inlineHelpText>
        <label>Time Period Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Calendar Month</fullName>
                </value>
                <value>
                    <fullName>Calendar Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a time period to calculate utilization for. The dates will be adjusted for you automatically after selection.</inlineHelpText>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Utilization Calculations</relationshipLabel>
        <relationshipName>Utilization_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <inlineHelpText>Select a type that describes this calculation.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Last Week</fullName>
                </value>
                <value>
                    <fullName>Current Week and Last Week</fullName>
                </value>
                <value>
                    <fullName>Week to Date</fullName>
                </value>
                <value>
                    <fullName>Week Forecast</fullName>
                </value>
                <value>
                    <fullName>Current Week and Next Week</fullName>
                </value>
                <value>
                    <fullName>Last, Current and Next Week</fullName>
                </value>
                <value>
                    <fullName>Next Week</fullName>
                </value>
                <value>
                    <fullName>Last Month</fullName>
                </value>
                <value>
                    <fullName>Current Month and Last Month</fullName>
                </value>
                <value>
                    <fullName>Month to Date</fullName>
                </value>
                <value>
                    <fullName>Month Forecast</fullName>
                </value>
                <value>
                    <fullName>Current Month and Next Month</fullName>
                </value>
                <value>
                    <fullName>Last, Current and Next Month</fullName>
                </value>
                <value>
                    <fullName>Next Month</fullName>
                </value>
                <value>
                    <fullName>Last Quarter</fullName>
                </value>
                <value>
                    <fullName>Current Quarter and Last Quarter</fullName>
                </value>
                <value>
                    <fullName>Quarter to Date</fullName>
                </value>
                <value>
                    <fullName>Quarter Forecast</fullName>
                </value>
                <value>
                    <fullName>Current Quarter and Next Quarter</fullName>
                </value>
                <value>
                    <fullName>Last, Current and Next Quarter</fullName>
                </value>
                <value>
                    <fullName>Next Quarter</fullName>
                </value>
                <value>
                    <fullName>Last Year</fullName>
                </value>
                <value>
                    <fullName>Current Year and Last Year</fullName>
                </value>
                <value>
                    <fullName>Year to Date</fullName>
                </value>
                <value>
                    <fullName>Year Forecast</fullName>
                </value>
                <value>
                    <fullName>Current Year and Next Year</fullName>
                </value>
                <value>
                    <fullName>Last, Current and Next Year</fullName>
                </value>
                <value>
                    <fullName>Next Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Utilization Calculation</label>
    <nameField>
        <label>Utilization Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilization Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__batch_id_required</fullName>
        <active>false</active>
        <description>Add a validation rule to enforce required instead of on the field because the field would otherwise be required on the page layout.</description>
        <errorConditionFormula>ISBLANK(pse__Batch_Id__c)</errorConditionFormula>
        <errorDisplayField>pse__Batch_Id__c</errorDisplayField>
        <errorMessage>Batch ID is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__check_historical_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(pse__Calculate_Historical_Utilization__c, pse__Historical_Utilization_End_Date__c &lt; pse__Historical_Utilization_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>pse__Historical_Utilization_End_Date__c</errorDisplayField>
        <errorMessage>End date is prior to the start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__check_scheduled_end_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(pse__Calculate_Scheduled_Utilization__c, pse__Scheduled_Utilization_End_Date__c &lt; pse__Scheduled_Utilization_Start_Date__c)</errorConditionFormula>
        <errorDisplayField>pse__Scheduled_Utilization_End_Date__c</errorDisplayField>
        <errorMessage>End date is prior to the start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__continuous_dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND( pse__Calculate_Historical_Utilization__c , pse__Calculate_Scheduled_Utilization__c, OR(pse__Scheduled_Utilization_Start_Date__c &gt; (pse__Historical_Utilization_End_Date__c + 1), pse__Scheduled_Utilization_Start_Date__c &lt; pse__Historical_Utilization_End_Date__c))</errorConditionFormula>
        <errorDisplayField>pse__Scheduled_Utilization_Start_Date__c</errorDisplayField>
        <errorMessage>Scheduled utilization start date must immediately follow the historical utilization end date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__disallow_historical_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>AND( pse__Calculate_Historical_Utilization__c, OR ( pse__Historical_Utilization_Start_Date__c &gt;  TODAY() , pse__Historical_Utilization_End_Date__c &gt; TODAY() ))</errorConditionFormula>
        <errorMessage>Historical utilization calculation for future dates is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__disallow_scheduled_in_past</fullName>
        <active>false</active>
        <errorConditionFormula>AND( pse__Calculate_Scheduled_Utilization__c, OR ( pse__Scheduled_Utilization_Start_Date__c &lt;  TODAY() , pse__Scheduled_Utilization_End_Date__c &lt; TODAY() ))</errorConditionFormula>
        <errorMessage>Scheduled utilization calculation for past dates is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__historical_dates_requried_if_checked</fullName>
        <active>true</active>
        <errorConditionFormula>AND( pse__Calculate_Historical_Utilization__c, OR(ISBLANK(pse__Historical_Utilization_Start_Date__c), ISBLANK(pse__Historical_Utilization_End_Date__c)))</errorConditionFormula>
        <errorDisplayField>pse__Calculate_Historical_Utilization__c</errorDisplayField>
        <errorMessage>Historical Start and End Date are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__only_one_source_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>IF
(
IF(ISBLANK(pse__Region__c),0,1) + 
IF(ISBLANK(pse__Practice__c),0,1) +   
IF(ISBLANK(pse__Group__c),0,1) +
IF(ISBLANK(pse__Resource__c),0,1) &gt; 1,
true,
false
)</errorConditionFormula>
        <errorMessage>Only one of Region, Practice, Group, or Resource may be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__only_one_subtotal_source_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>IF
(
IF(ISBLANK(pse__Subtotal_by_Region__c),0,1) + 
IF(ISBLANK(pse__Subtotal_by_Practice__c),0,1) +   
IF(ISBLANK(pse__Subtotal_by_Group__c),0,1) &gt; 1,
true,
false
)</errorConditionFormula>
        <errorMessage>Only one value may be specified: Subtotal by Region, Practice or Group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__scheduled_dates_requried_if_checked</fullName>
        <active>true</active>
        <errorConditionFormula>AND( pse__Calculate_Scheduled_Utilization__c, OR(ISBLANK(pse__Scheduled_Utilization_Start_Date__c), ISBLANK(pse__Scheduled_Utilization_End_Date__c)))</errorConditionFormula>
        <errorDisplayField>pse__Calculate_Scheduled_Utilization__c</errorDisplayField>
        <errorMessage>Scheduled Start and End Date are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__source_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(pse__Region__c), ISBLANK(pse__Practice__c), ISBLANK(pse__Group__c), ISBLANK(pse__Resource__c))</errorConditionFormula>
        <errorMessage>One of Region, Practice, Group, or Resource is required</errorMessage>
    </validationRules>
</CustomObject>